--- a/index.html
+++ b/index.html
@@ -2663,7 +2663,7 @@ height: auto;
         }
 .Bmap{
     display: grid;
-    grid-template-columns: 0.1fr 0.15fr;
+    grid-template-columns: 0.65fr 500px;
     column-gap: 0.2rem;
     justify-content: center;
     justify-items: center;
@@ -2671,10 +2671,20 @@ height: auto;
     height: 180px;
     padding: 10px;
     margin-top: 1rem;
+    margin-left: -4.5rem;
 }
-
+.Burkimap{
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    justify-items: center;
+    width: 350px;
+    height: auto;
+    margin-left: -8rem;
+}
 .Burkimap img{
     background: #fff;
+    width: 230px;
     padding: 5px;
     height: 175px;
     border-radius: 0.5rem;
@@ -2973,7 +2983,7 @@ height: auto;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            width: 800px;
+            width: 775px;
             height: 174px;
             padding: 8px;
             background: #fffffff5;
@@ -2981,7 +2991,8 @@ height: auto;
             box-shadow: 0 -0.5px 0.3rem 1px rgba(30, 63, 184, 0.914);
             color:rgba(126, 126, 126, 0.941);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 14px;
+            font-size: 13.6px;
+            margin-left: 9.5rem;
         }
 
 
@@ -5110,11 +5121,11 @@ function showSlides(n) {
     <p> 
         <br>
         <p style=" font-size: 12.85px; color: rgb(90, 90, 90); line-height: 18px;">
-             A. [Definition] According to the <a href="https://languages.oup.com/" target="_blank"> Oxford Languages</a>, inclusion is the practice or policy of providing equal access to opportunities and resources for people who might otherwise be excluded or marginalized, such as those who have physical or intellectual disabilities and members of other minority groups.    
+             A. [Definition] According to the <a href="https://languages.oup.com/" target="_blank"><b>Oxford Languages</b></a>, inclusion is the practice or policy of providing equal access to opportunities and resources for people who might otherwise be excluded or marginalized, such as those who have physical or intellectual disabilities and members of other minority groups.    
                 <br>
                 <br>
         B. [Definition] According to the website of
-            <a href=" https://dictionary.cambridge.org/fr/dictionnaire/anglais/inclusion " target="_blank">Cambridge Dictionary</a>, inclusion is the act of including someone or something as part of a group, list, etc. [A person or thing that is included] 
+            <a href=" https://dictionary.cambridge.org/fr/dictionnaire/anglais/inclusion " target="_blank"><b>Cambridge Dictionary</b></a>, inclusion is the act of including someone or something as part of a group, list, etc. [A person or thing that is included] 
             <br>Examples:<br>
             1. She is being considered for inclusion in the Olympic team.
             <br>
@@ -5123,11 +5134,11 @@ function showSlides(n) {
             3. Two last-minute inclusions are Jim and Ahmed 
             <br>
              <br>
-            C. [Definition] According to the website of <a href="https://www.merriam-webster.com/dictionary/inclusion" target="_blank">Merriam-Webster</a>  inclusion is the act of including, the state of being included
+            C. [Definition] According to the website of <a href="https://www.merriam-webster.com/dictionary/inclusion" target="_blank"><b>Merriam-Webster</b></a>  inclusion is the act of including, the state of being included
              - Something that is included: such as a gaseous, liquid, or solid foreign body enclosed in a mass (as of a mineral), passive usually temporary product of cell activity (such as a starch grain) within the cytoplasm or nucleus.
         <br>
             <br> 
-            But how can we recognize an inclusive environment ? Basically through some points below:
+        <b>But how can an inclusive environment be identified </b>? These are summarily some exploring points consisting not only of observing and questioning but also answering or solutioning and helps change mentalities positively about people living with disabilities in the society.
         </b>
         <br>
         <hr style="color: #858585">
