--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         .navbar {
             display: flex;
             background: rgba(5, 13, 52, 0.982);
-            height: 53.35px;
+            height: 53.5px;
             object-fit: cover;
             z-index: 1;
             top: 0;
@@ -137,13 +137,14 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
+  border-top: 0.1rem solid rgb(36, 88, 173);
+  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
 }
 
         .Photography-content a {
             font-size: 17px;
             float: none;
-            color: rgb(64, 114, 195);
+            color: #000;
             padding: 9.45px 14px;
             text-decoration: none;
             display: grid;
@@ -211,13 +212,14 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
+  border-top: 0.1rem solid rgb(36, 88, 173);
+  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
    }
 
         .Sport-content a {
             font-size: 16px;
             float: none;
-            color: rgb(64, 114, 195);
+            color: #000;
             padding: 9.45px 14px;
             text-decoration: none;
             display: grid;
@@ -285,13 +287,14 @@
   height: 155px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
+  border-top: 0.1rem solid rgb(36, 88, 173);
+  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
    }
 
         .Education-content a {
             font-size: 16px;
             float: none;
-            color: rgb(64, 114, 195);
+            color: #000;
             padding: 9.45px 14px;
             text-decoration: none;
             display: grid;
@@ -359,13 +362,14 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
+  border-top: 0.1rem solid rgb(36, 88, 173);
+  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
     }
 
         .Promoter-content a {
             font-size: 17px;
             float: none;
-            color: rgb(64, 114, 195);
+            color: #000;
             padding: 9.45px 14px;
             text-decoration: none;
             display: grid;
@@ -433,14 +437,15 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
+  border-top: 0.1rem solid rgb(36, 88, 173);
+  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
  }
 
         .Contact-content a {
             width: 73px;
             font-size: 17px;
             float: none;
-            color: rgb(64, 114, 195);
+            color: #000;
             padding: 9.45px 14px;
             text-decoration: none;
             display: grid;
@@ -508,13 +513,14 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
+  border-top: 0.1rem solid rgb(36, 88, 173);
+  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
    } 
 
         .Community-content a {
             font-size: 17px;
             float: none;
-            color: rgb(64, 114, 195);
+            color: #000;
             padding: 9.45px 14px;
             text-decoration: none;
             display: grid;
@@ -584,13 +590,14 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
+  border-top: 0.1rem solid rgb(36, 88, 173);
+  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
    }
 
         .TikiYiki-content a {
             font-size: 17px;
             float: none;
-            color: rgb(64, 114, 195);
+            color: #000;
             padding: 9.45px 14px;
             text-decoration: none;
             display: grid;
@@ -658,13 +665,14 @@
   height: 158px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
+  border-top: 0.1rem solid rgb(36, 88, 173);
+  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
   }
 
         .Disability-content a {
             font-size: 17px;
             float: none;
-            color: rgb(64, 114, 195);
+            color: #000;
             padding: 9.45px 14px;
             text-decoration: none;
             display: grid;
@@ -6634,7 +6642,4 @@ function showSlides(n) {
 </body>
 
 </html>
-
-
-
 
