--- a/index.html
+++ b/index.html
@@ -5129,7 +5129,15 @@ function showSlides(n) {
     <p> 
         <br>
         <p style=" font-size: 12.85px; color: rgb(90, 90, 90); line-height: 18px;">
-             A. [Definition] According to the <a href="https://languages.oup.com/" target="_blank"><b>Oxford Languages</b></a>, inclusion is the practice or policy of providing equal access to opportunities and resources for people who might otherwise be excluded or marginalized, such as those who have physical or intellectual disabilities and members of other minority groups.    
+             A. [Definition] According to the <a href="https://www.collinsdictionary.com/dictionary/english/inclusion" target="_blank"><b>Collins Dictionary</b></a>, 
+             Inclusion is the act of making a person or thing part of a group or collection.
+             <br>
+             [...a confident performance which justified his inclusion in the team.]
+             <br>
+             [...the inclusion of yoghurt in many popular dishes.]
+             <br>
+             Synonyms: addition, incorporation, introduction, insertion.
+                 
                 <br>
                 <br>
         B. [Definition] According to the website of
@@ -6642,4 +6650,5 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
