--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
+  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
 }
 
         .Photography-content a {
@@ -213,7 +213,7 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
+  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
    }
 
         .Sport-content a {
@@ -288,7 +288,7 @@
   justify-content: center;
   align-items: center;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
+  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
    }
 
         .Education-content a {
@@ -363,7 +363,7 @@
   align-items: center;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
+  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
     }
 
         .Promoter-content a {
@@ -438,7 +438,7 @@
   align-items: center;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
+  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
  }
 
         .Contact-content a {
@@ -514,7 +514,7 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
+  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
    } 
 
         .Community-content a {
@@ -591,7 +591,7 @@
   align-items: center;
   margin-left: 45px;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
+  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
    }
 
         .TikiYiki-content a {
@@ -666,7 +666,7 @@
   justify-content: center;
   align-items: center;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: -1px 1.75px 0.24rem 0 rgb(36, 88, 173);
+  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
   }
 
         .Disability-content a {
@@ -4006,7 +4006,7 @@ background: #717171;
             height: 45px;
             border-radius: 1.55rem;
             text-align: left;
-            background: -webkit-linear-gradient(rgb(18, 37, 246),rgba(18, 37, 246, 0.685));
+            background: -webkit-linear-gradient(rgb(73, 88, 250),rgba(73, 88, 250, 0.746));
             line-height: 17.5px;
             font-family: 'Kanit';
             font-size: 11.5px;
@@ -5154,7 +5154,7 @@ function showSlides(n) {
              - Something that is included: such as a gaseous, liquid, or solid foreign body enclosed in a mass (as of a mineral), passive usually temporary product of cell activity (such as a starch grain) within the cytoplasm or nucleus.
         <br>
             <br> 
-        <b>But how can an inclusive environment be identified </b>? These are summarily some exploring points consisting not only of observing and questioning but also answering or solutioning and helps change mentalities positively about people living with disabilities in the society.
+        <b>But how can an inclusive environment be identified (detected) </b>? These are summarily some exploring points consisting not only of observing and questioning but also answering or solutioning and helps change mentalities positively about people living with disabilities in the society.
         </b>
         <br>
         <hr style="color: #858585">
@@ -6650,5 +6650,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
