--- a/index.html
+++ b/index.html
@@ -149,13 +149,14 @@
             text-decoration: none;
             display: grid;
             text-align: left;
+            font-family: 'Kanit';
         }
 
         .Photography-content a:hover {
             color: red;
             font-family: 'georgia';
             padding: 8px 10px;
-            font-size: 16px;
+            font-size: 17px;
             line-height: 36px;
         }
 
@@ -178,7 +179,7 @@
             justify-content: center;
             justify-items: center;
             padding: 5px;
-            width: 33%;
+            width: 35%;
         }
 
         .Sport {
@@ -224,14 +225,15 @@
             text-decoration: none;
             display: grid;
             text-align: left;
+            font-family: 'Kanit';
         }
 
         .Sport-content a:hover {
             color: red;
             font-family: 'georgia';
             padding: 8px 10px;
-            font-size: 16px;
-            line-height: 38px;
+            font-size: 17px;
+            line-height: 36px;
         }
 
         .Sport:hover .Sport-content:hover a:hover{
@@ -299,14 +301,15 @@
             text-decoration: none;
             display: grid;
             text-align: left;
+            font-family: 'Kanit';
         }
 
         .Education-content a:hover {
             color: red;
             font-family: 'georgia';
             padding: 8px 10px;
-            font-size: 16px;
-            line-height: 38px;
+            font-size: 17px;
+            line-height: 36px;
         }
 
         .Education:hover .Education-content:hover a:hover{
@@ -374,13 +377,14 @@
             text-decoration: none;
             display: grid;
             text-align: left;
+            font-family: 'Kanit';
         }
 
         .Promoter-content a:hover {
             color: red;
             font-family: 'georgia';
             padding: 8px 10px;
-            font-size: 16px;
+            font-size: 17px;
             line-height: 36px;
         }
 
@@ -450,13 +454,14 @@
             text-decoration: none;
             display: grid;
             text-align: left;
+            font-family: 'Kanit';
         }
 
         .Contact-content a:hover {
             color: red;
             font-family: 'georgia';
             padding: 8px 10px;
-            font-size: 16px;
+            font-size: 17px;
             line-height: 36px;
         }
 
@@ -525,13 +530,14 @@
             text-decoration: none;
             display: grid;
             text-align: left;
+            font-family: 'Kanit';
         }
 
         .Community-content a:hover {
             color: red;
             font-family: 'georgia';
             padding: 8px 10px;
-            font-size: 16px;
+            font-size: 17px;
             line-height: 36px;
         }
 
@@ -585,7 +591,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  width: 265px;
+  width: 270px;
   height: 110px;
   justify-content: center;
   align-items: center;
@@ -602,13 +608,14 @@
             text-decoration: none;
             display: grid;
             text-align: left;
+            font-family: 'Kanit';
         }
 
         .TikiYiki-content a:hover {
             color: red;
             font-family: 'georgia';
             padding: 8px 10px;
-            font-size: 16px;
+            font-size: 17px;
             line-height: 36px;
         }
 
@@ -677,14 +684,15 @@
             text-decoration: none;
             display: grid;
             text-align: left;
+            font-family: 'Kanit';
         }
 
         .Disability-content a:hover {
             color: red;
             font-family: 'georgia';
             padding: 8px 10px;
-            font-size: 16px;
-            line-height: 37px;
+            font-size: 17px;
+            line-height: 36px;
         }
 
         .Disability:hover .Disability-content:hover a:hover{
@@ -706,7 +714,7 @@
             justify-content: center;
             justify-items: center;
             padding: 5px;;
-            width: 37%;
+            width: 39%;
         }
 
         .footer {
@@ -6650,6 +6658,7 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
 
