--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: blue;
             cursor: pointer;
-            background: rgb(156, 186, 242);
+            background: rgb(253, 253, 253);
         }
 
  .Photography-content {
@@ -138,7 +138,7 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
+  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
 }
 
         .Photography-content a {
@@ -198,9 +198,9 @@
 
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: blue;
             cursor: pointer;
-            background: rgb(156, 186, 242);
+            background: rgb(253, 253, 253);
         }
 
         .Sport-content {
@@ -214,7 +214,7 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
+  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
    }
 
         .Sport-content a {
@@ -274,9 +274,9 @@
 
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: blue;
             cursor: pointer;
-            background: rgb(156, 186, 242);
+            background: rgb(253, 253, 253);
                 }
 
         .Education-content {
@@ -290,7 +290,7 @@
   justify-content: center;
   align-items: center;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
+  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
    }
 
         .Education-content a {
@@ -350,9 +350,9 @@
 
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: blue;
             cursor: pointer;
-            background: rgb(156, 186, 242);
+            background: rgb(253, 253, 253);
         }
 
         .Promoter-content {
@@ -366,7 +366,7 @@
   align-items: center;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
+  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
     }
 
         .Promoter-content a {
@@ -426,9 +426,9 @@
 
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: blue;
             cursor: pointer;
-            background: rgb(156, 186, 242);
+            background: rgb(253, 253, 253);
         }
 
         .Contact-content {
@@ -442,7 +442,7 @@
   align-items: center;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
+  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
  }
 
         .Contact-content a {
@@ -503,9 +503,9 @@
 
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: blue;
             cursor: pointer;
-            background: rgb(156, 186, 242);
+            background: rgb(253, 253, 253);
         }
 
         .Community-content {
@@ -519,7 +519,7 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
+  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
    } 
 
         .Community-content a {
@@ -580,9 +580,9 @@
 
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: blue;
             cursor: pointer;
-            background: rgb(156, 186, 242);
+            background: rgb(253, 253, 253);
         }
 
         .TikiYiki-content {
@@ -596,8 +596,8 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
+  border-top: 0.11rem solid rgb(36, 88, 173);
+  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
    }
 
         .TikiYiki-content a {
@@ -657,9 +657,9 @@
 
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
-            color: #000;
+            color: blue;
             cursor: pointer;
-            background: rgb(156, 186, 242);
+            background: rgb(253, 253, 253);
         }
 
         .Disability-content {
@@ -673,7 +673,7 @@
   justify-content: center;
   align-items: center;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3px 0.4rem 1px rgb(37, 91, 178);
+  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
   }
 
         .Disability-content a {
@@ -3007,7 +3007,7 @@ height: auto;
             box-shadow: 0 -0.5px 0.3rem 1px rgba(30, 63, 184, 0.914);
             color:rgba(126, 126, 126, 0.941);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 13.6px;
+            font-size: 13.55px;
             margin-left: 9.5rem;
         }
 
@@ -4014,7 +4014,7 @@ background: #717171;
             height: 45px;
             border-radius: 1.55rem;
             text-align: left;
-            background: -webkit-linear-gradient(rgb(73, 88, 250),rgba(73, 88, 250, 0.746));
+            background: -webkit-linear-gradient(rgb(26, 45, 246),rgba(56, 73, 251, 0.786));
             line-height: 17.5px;
             font-family: 'Kanit';
             font-size: 11.5px;
@@ -5140,9 +5140,11 @@ function showSlides(n) {
              A. [Definition] According to the <a href="https://www.collinsdictionary.com/dictionary/english/inclusion" target="_blank"><b>Collins Dictionary</b></a>, 
              Inclusion is the act of making a person or thing part of a group or collection.
              <br>
-             [...a confident performance which justified his inclusion in the team.]
+             <b>Examples </b>: 
              <br>
-             [...the inclusion of yoghurt in many popular dishes.]
+             1. [...a confident performance which justified his inclusion in the team.]
+             <br>
+             2. [...the inclusion of yoghurt in many popular dishes.]
              <br>
              Synonyms: addition, incorporation, introduction, insertion.
                  
@@ -5150,7 +5152,8 @@ function showSlides(n) {
                 <br>
         B. [Definition] According to the website of
             <a href=" https://dictionary.cambridge.org/fr/dictionnaire/anglais/inclusion " target="_blank"><b>Cambridge Dictionary</b></a>, inclusion is the act of including someone or something as part of a group, list, etc. [A person or thing that is included] 
-            <br>Examples:<br>
+            <br>
+            <b>Examples </b>
             1. She is being considered for inclusion in the Olympic team.
             <br>
             2. Inclusion of The book's value stems from its inclusion of multiple viewpoints.
@@ -5162,7 +5165,8 @@ function showSlides(n) {
              - Something that is included: such as a gaseous, liquid, or solid foreign body enclosed in a mass (as of a mineral), passive usually temporary product of cell activity (such as a starch grain) within the cytoplasm or nucleus.
         <br>
             <br> 
-        <b>But how can an inclusive environment be identified (detected) </b>? These are summarily some exploring points consisting not only of observing and questioning but also answering or solutioning and helps change mentalities positively about people living with disabilities in the society.
+        <b>But how can an inclusive environment be identified (detected) </b>? These are summarily some exploring points 
+        consisting not only to observing and questioning about how people in a chosen community are dealing with inclusion. After these steps answers and solutions should come as results of oberving and questioning.
         </b>
         <br>
         <hr style="color: #858585">
@@ -6405,7 +6409,7 @@ function showSlides(n) {
           </a> in which he taught disabled and orphaned children but also led several awareness sessions with a focal theme: <b>“Disability and Social Inclusion”</b>.
           <br>
           <br>       
-          In 2007, 2008, 2013, Gabriel went to Europe in order to promote his organisation and fundraise money for his projects like to improving education and provide reasonable health care services to vulnerable people in need. His stays (trips) led him not only to Switzerland like in <a href="https://www.geneve.ch/fr" target="_blank">Geneva</a>, <a href="https://www.sion.ch/" target="_blank"> Sion</a>, <a href="https://www.delemont.ch/" target="_blank">Delemont</a>, <a href="http://www.vendlincourt.ch/" target="_blank"> and Vendlincourt</a> with impactful collaboration of friends and founding members of<a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> 
+          In 2007, 2008, 2013, Gabriel went to Europe in order to promote his organisation PAAS NEERE and fundraise money for his projects including to improve education and provide reasonable health care services to disabled people in need. His stays (trips) led him not only to Switzerland like in <a href="https://www.geneve.ch/fr" target="_blank">Geneva</a>, <a href="https://www.sion.ch/" target="_blank"> Sion</a>, <a href="https://www.delemont.ch/" target="_blank">Delemont</a>, <a href="http://www.vendlincourt.ch/" target="_blank"> and Vendlincourt</a> through an impactful collaboration with patners and a network of friends and founding members of<a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> 
            Transport Handicap in the canton of Valais</a> but also in Germany at<a href=" https://fr.wikipedia.org/wiki/Rastatt" target="_blank"> Rasttat</a> and <a href="https://fr.wikipedia.org/wiki/Kuppenheim" target="_blank"> Kuppenheim</a> in <a href="https://fr.wikipedia.org/wiki/Bade-Wurtemberg" target="_blank"> the lander of Bade-Wurtemberg [Baden-Württemberg] </a> where he host a serie of conferences about PAAS NEERE the organisation of which he was president.
         
          <br>
@@ -6658,8 +6662,5 @@ function showSlides(n) {
 </body>
 
 </html>
-
-
-
 
 
