--- a/index.html
+++ b/index.html
@@ -81,30 +81,19 @@
             align-items: center;
         }
 
-        .navbar a {
-            display: block;
-            float: left;
-            font-size: 19px;
-            color: #000;
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            text-align: center;
-            padding: 5px 10px;
-            text-decoration: none;
-            margin: 0;
-        }
-
+        
         .navbar img {
             background: #fff;
-            width: 95px;
-            height: 44px;
+            width: 90px;
+            height: 40px;
             border: 2px solid #fff!important;
-            border-radius: 0.3rem;
-            margin-top: 0.65rem;
+            border-radius: 0.2rem;
+            margin-top: 1.25rem;
         }
 
         .navbar img:hover {
             transform: scale(1.05);
-            box-shadow: 0 -1px 0.5rem 0.1px rgba(159, 159, 159, 0.961);
+            box-shadow: 0 -1px 0.5rem 0.1px rgba(171, 171, 171, 0.961);
         }
 
         .Photography {
@@ -129,7 +118,7 @@
         }
 
  .Photography-content {
-  height: 110px;
+  height: 90px;
   justify-content: center;
   align-items: center;
   display: none;
@@ -138,14 +127,14 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
 }
 
         .Photography-content a {
-            font-size: 17px;
+            font-size: 13.5px;
             float: none;
             color: #000;
-            padding: 9.45px 14px;
+            padding: 6px 10px;
             text-decoration: none;
             display: grid;
             text-align: left;
@@ -155,31 +144,30 @@
         .Photography-content a:hover {
             color: red;
             font-family: 'georgia';
-            padding: 8px 10px;
-            font-size: 17px;
-            line-height: 36px;
+            padding: 6px 10px;
+            font-size: 13.5px;
+            line-height: 22px;
         }
 
         .Photography:hover .Photography-content:hover a:hover{
             width: auto;
-            height: 50px;
+            padding: 10px;
+            height: 36px;
             text-align: center;
             background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
-            transition: 0.2s linear;
+            transition: 0.18s linear;
             justify-content: center;
             align-items: center;
-            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Photography:hover .Photography-content {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            padding: 5px;
-            width: 35%;
+            width: 30%;
         }
 
         .Sport {
@@ -205,7 +193,7 @@
 
         .Sport-content {
   width: 100px;
-  height: 153px;
+  height: 120px;
   justify-content: center;
   align-items: center;
   display: none;
@@ -214,14 +202,14 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
    }
 
         .Sport-content a {
-            font-size: 16px;
+            font-size: 13.5px;
             float: none;
             color: #000;
-            padding: 9.45px 14px;
+            padding: 6px 10px;
             text-decoration: none;
             display: grid;
             text-align: left;
@@ -231,30 +219,29 @@
         .Sport-content a:hover {
             color: red;
             font-family: 'georgia';
-            padding: 8px 10px;
-            font-size: 17px;
-            line-height: 36px;
+            padding: 6px 10px;
+            font-size: 13.5px;
+            line-height: 22px;
         }
 
         .Sport:hover .Sport-content:hover a:hover{
             width: auto;
-            height: 50px;
+            padding: 10px;
+            height: 36px;
             text-align: center;
             background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
-            transition: 0.2s linear;
+            transition: 0.18s linear;
             justify-content: center;
             align-items: center;
-            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Sport:hover .Sport-content {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            padding: 5px;
             width: 22%;
         }
 
@@ -286,18 +273,18 @@
   padding: 1px;
   z-index: 1;
   width: 240px;
-  height: 155px;
+  height: 120px;
   justify-content: center;
   align-items: center;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
    }
 
         .Education-content a {
-            font-size: 16px;
+            font-size: 13.5px;
             float: none;
             color: #000;
-            padding: 9.45px 14px;
+            padding: 6px 10px;
             text-decoration: none;
             display: grid;
             text-align: left;
@@ -307,31 +294,30 @@
         .Education-content a:hover {
             color: red;
             font-family: 'georgia';
-            padding: 8px 10px;
-            font-size: 17px;
-            line-height: 36px;
+            padding: 6px 10px;
+            font-size: 13.5px;
+            line-height: 22px;
         }
 
         .Education:hover .Education-content:hover a:hover{
             width: auto;
-            height: 50px;
+            padding: 10px;
+            height: 36px;
             text-align: center;
             background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
-            transition: 0.2s linear;
+            transition: 0.18s linear;
             justify-content: center;
             align-items: center;
-            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Education:hover .Education-content {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            padding: 5px;
-            width: 25%;
+            width: 22%;
         }
 
         .Promoter {
@@ -366,14 +352,14 @@
   align-items: center;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
     }
 
         .Promoter-content a {
-            font-size: 17px;
+            font-size: 13.5px;
             float: none;
             color: #000;
-            padding: 9.45px 14px;
+            padding: 6px 10px;
             text-decoration: none;
             display: grid;
             text-align: left;
@@ -383,30 +369,29 @@
         .Promoter-content a:hover {
             color: red;
             font-family: 'georgia';
-            padding: 8px 10px;
-            font-size: 17px;
-            line-height: 36px;
+            padding: 6px 10px;
+            font-size: 13.5px;
+            line-height: 22px;
         }
 
         .Promoter:hover .Promoter-content:hover a:hover{
-            width: 115px;
-            height: 45px;
+            width: auto;
+            padding: 10px;
+            height: 36px;
             text-align: center;
             background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
-            transition: 0.2s linear;
+            transition: 0.18s linear;
             justify-content: center;
             align-items: center;
-            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Promoter:hover .Promoter-content {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            padding: 5px;
             width: 9.55%;
         }
 
@@ -442,15 +427,14 @@
   align-items: center;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
  }
 
         .Contact-content a {
-            width: 73px;
-            font-size: 17px;
+            font-size: 13.5px;
             float: none;
             color: #000;
-            padding: 9.45px 14px;
+            padding: 6px 10px;
             text-decoration: none;
             display: grid;
             text-align: left;
@@ -460,30 +444,29 @@
         .Contact-content a:hover {
             color: red;
             font-family: 'georgia';
-            padding: 8px 10px;
-            font-size: 17px;
-            line-height: 36px;
+            padding: 6px 10px;
+            font-size: 13.5px;
+            line-height: 22px;
         }
 
         .Contact:hover .Contact-content:hover a:hover{
-            width: 121px;
-            height: 45px;
+            width: auto;
+            padding: 10px;
+            height: 36px;
             text-align: center;
             background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
-            transition: 0.2s linear;
+            transition: 0.18s linear;
             justify-content: center;
             align-items: center;
-            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Contact:hover .Contact-content {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            padding: 5px;
             width: 10%;
         }
 
@@ -509,8 +492,8 @@
         }
 
         .Community-content {
-  width: 260px;
-  height: 257px;
+  width: 150px;
+  height: 180px;
   justify-content: center;
   align-items: center;
   display: none;
@@ -519,14 +502,14 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
    } 
 
         .Community-content a {
-            font-size: 17px;
+            font-size: 13.5px;
             float: none;
             color: #000;
-            padding: 9.45px 14px;
+            padding: 6px 10px;
             text-decoration: none;
             display: grid;
             text-align: left;
@@ -536,31 +519,30 @@
         .Community-content a:hover {
             color: red;
             font-family: 'georgia';
-            padding: 8px 10px;
-            font-size: 17px;
-            line-height: 36px;
+            padding: 6px 10px;
+            font-size: 13.5px;
+            line-height: 22px;
         }
 
         .Community:hover .Community-content:hover a:hover{
             width: auto;
-            height: 50px;
+            padding: 10px;
+            height: 36px;
             text-align: center;
             background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
-            transition: 0.2s linear;
+            transition: 0.18s linear;
             justify-content: center;
             align-items: center;
-            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
         
         .Community:hover .Community-content {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            padding: 5px;
-            width: 39%;
+            width: 31%;
         }
 
         .TikiYiki {
@@ -592,19 +574,19 @@
   padding: 1px;
   z-index: 1;
   width: 270px;
-  height: 110px;
+  height: 95px;
   justify-content: center;
   align-items: center;
   margin-left: 45px;
   border-top: 0.11rem solid rgb(36, 88, 173);
-  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
    }
 
         .TikiYiki-content a {
-            font-size: 17px;
+            font-size: 13.5px;
             float: none;
             color: #000;
-            padding: 9.45px 14px;
+            padding: 6px 10px;
             text-decoration: none;
             display: grid;
             text-align: left;
@@ -614,31 +596,30 @@
         .TikiYiki-content a:hover {
             color: red;
             font-family: 'georgia';
-            padding: 8px 10px;
-            font-size: 17px;
-            line-height: 36px;
+            padding: 6px 10px;
+            font-size: 13.5px;
+            line-height: 22px;
         }
 
         .TikiYiki:hover .TikiYiki-content:hover a:hover{
             width: auto;
-            height: 50px;
+            padding: 10px;
+            height: 36px;
             text-align: center;
             background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
-            transition: 0.2s linear;
+            transition: 0.18s linear;
             justify-content: center;
             align-items: center;
-            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .TikiYiki:hover .TikiYiki-content{
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            padding: 5px;
-            width: 25%;
+            width: 20%;
         }
 
         .Disability {
@@ -668,19 +649,19 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  width: 270px;
-  height: 158px;
+  width: 120px;
+  height: 120px;
   justify-content: center;
   align-items: center;
   border-top: 0.1rem solid rgb(36, 88, 173);
-  box-shadow: 0 3.6px 0.4rem 1px rgba(5, 13, 52, 0.982);
+  box-shadow: 0 2px 0.35rem 0.5px rgba(6, 17, 67, 0.982);
   }
 
         .Disability-content a {
-            font-size: 17px;
+            font-size: 13.5px;
             float: none;
             color: #000;
-            padding: 9.45px 14px;
+            padding: 6px 10px;
             text-decoration: none;
             display: grid;
             text-align: left;
@@ -690,31 +671,30 @@
         .Disability-content a:hover {
             color: red;
             font-family: 'georgia';
-            padding: 8px 10px;
-            font-size: 17px;
-            line-height: 36px;
+            padding: 6px 10px;
+            font-size: 13.5px;
+            line-height: 22px;
         }
 
         .Disability:hover .Disability-content:hover a:hover{
             width: auto;
-            height: 50px;
+            padding: 10px;
+            height: 36px;
             text-align: center;
             background-color: rgba(42, 53, 140, 0.68);
             color: #fff;
             border-radius: 1.5rem;
-            transition: 0.2s linear;
+            transition: 0.18s linear;
             justify-content: center;
             align-items: center;
-            border: 0.1rem solid rgba(54, 67, 167, 0.282);
         }
 
         .Disability:hover .Disability-content {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            padding: 5px;;
-            width: 39%;
+            width: 30.5%;
         }
 
         .footer {
@@ -6662,3 +6642,4 @@ function showSlides(n) {
 </body>
 
 </html>
+
